# Stone

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cli.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: test_func.py
hasher/: __init__.py  parser.py
hasher/stone/hasher/: __init__.py
stone/: cli.py
stone/hasher/: normalizer.py  parser.py  tester.py
